
= Maven 3 Plugin

== 2.3.0

* Ensure that the property `fileName` is set for `:Maven:Project` nodes that represent local (i.e. scanned) Maven projects

== 1.12.0

* Removed deprecated graph model `(:Pom)-[:DECLARES_DEPENDENCY]\->(:Maven:Artifact)`, it has been replaced by a model supporting exclusions (see deprecation notice in 1.9.0)

== 1.10.1

* Fixed a problem where scanning dependencies either skipped artifacts (if specified in dependency management) or scanned them multiple times

== 1.9.0

* Deprecated graph model `(:Pom)-[:DECLARES_DEPENDENCY]\->(:Maven:Artifact)`, it has been replaced by a model supporting exclusions:

  (:Pom)-[:DECLARES]->(dependency:Maven:Dependency)-[:TO_ARTIFACT]->(:Maven:Artifact),
  (dependency)-[:EXCLUDES]->(:Maven:Exclusion)

== 1.8.0

* Added plugin configuration options for scanning artifacts that are declared as dependencies to a Maven project (https://github.com/jQAssistant/jqa-maven3-plugin/issues/10[issue])
** `maven3.dependencies.scan` for enabling scanning dependencies
** `maven3.dependencies.includes` and `maven3.dependencies.excludes` taking Maven artifact filters to control which artifact should be scanned
* Added capability to scan URLs as part of scanIncludes

== 1.7.0

* Added a label `Effective` for `:Maven:Pom` nodes to represent the effective model of a project or artifact
* Fixed a problem where in a multi module Maven project resolved dependencies between artifacts have been created multipe times
* Improved graph model to support for exclusions on declared or managed dependencies:

  (:Pom)-[:DECLARES]->(dependency:Maven:Dependency)-[:TO_ARTIFACT]->(:Maven:Artifact),
  (dependency)-[:EXCLUDES]->(:Maven:Exclusion)

NOTE: The previously used graph model `(:Pom)-[:DECLARES_DEPENDENCY]\->(:Maven:Artifact)` is still supported but deprecated.
 It will be removed in upcoming releases.
